Fix AB#281 Table cell header for updating storage account information should have a color contrast of 3:1

--- a/src/@batch-flask/ui/table/table.scss
+++ b/src/@batch-flask/ui/table/table.scss
@@ -169,23 +169,11 @@ bl-table {
 
         outline: none;
 
-        &:focus {
-            color: $hover-bg-color;
-        }
-
         &.sortable {
             cursor: pointer;
 
             .sort-icon {
                 margin-left: 3px;
-            }
-
-            &:hover:not(.sorting) > .sort-icon {
-                color: $hover-bg-color;
-            }
-
-            &:focus:not(.sorting) > .sort-icon {
-                color: $hover-bg-color;
             }
         }
 
